--- a/micblog/app/templates/index.html
+++ b/micblog/app/templates/index.html
@@ -1,7 +1,8 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>Hi, {{ user.nickname }}!</h1>
-{% for post in posts %}
-<div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
-{% endfor %}
-{% endblock %}
+<html>
+  <head>
+    <title>{{ title }} - microblog</title>
+  </head>
+  <body>
+      <h1>Hello, {{ user.nickname }}!</h1>
+  </body>
+</html>
