--- a/micblog/app/templates/login.html
+++ b/micblog/app/templates/login.html
@@ -1,25 +1,4 @@
-<!--&lt;!&ndash; extend from base layout &ndash;&gt;-->
-<!--{% extends "base.html" %}-->
-
-<!--{% block content %}-->
-<!--<h1>Sign In</h1>-->
-<!--<form action="" method="post" name="login">-->
-    <!--{{form.hidden_tag()}}-->
-    <!--<p>-->
-        <!--Please enter your Name:<br>-->
-        <!--{{form.name(size=80)}}<br>-->
-    <!--</p>-->
-    <!--<p>-->
-        <!--Password:<br>-->
-        <!--{{ form.password }}-->
-    <!--</p>-->
-    <!--<p>{{form.remember_me}} Remember Me?</p>-->
-    <!--<p><input type="submit" value="Sign In"></p>-->
-<!--</form>-->
-<!--{% endblock %}-->
-
-
-<!-- extend base layout -->
+<!-- extend from base layout -->
 {% extends "base.html" %}
 
 {% block content %}
@@ -27,20 +6,14 @@
 <form action="" method="post" name="login">
     {{form.hidden_tag()}}
     <p>
-        Please enter your OpenID:<br>
+        Please enter your Name:<br>
         {{form.name(size=80)}}<br>
-        {% for error in form.errors.name %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}<br>
     </p>
     <p>
         Password:<br>
-        {{form.password}}<br>
-        {% for error in form.errors.password %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}<br>
+        {{ form.password }}
     </p>
-    <p>{{form.remember_me}} Remember Me</p>
+    <p>{{form.remember_me}} Remember Me?</p>
     <p><input type="submit" value="Sign In"></p>
 </form>
 {% endblock %}
