--- a/micblog/app/templates/login.html
+++ b/micblog/app/templates/login.html
@@ -1,4 +1,5 @@
-<!-- extend from base layout -->
+<!-- 包含生成表单的 HTML 的模板-->
+<! -- extend form base layout -->
 {% extends "base.html" %}
 
 {% block content %}
@@ -8,10 +9,16 @@
     <p>
         Please enter your Name:<br>
         {{form.name(size=80)}}<br>
+        {% for error in form.errors.name %}
+        <span style="color:red;">[{{ error }}]</span>
+        {% endfor %}<br>
     </p>
     <p>
         Password:<br>
-        {{ form.password }}
+        {{ form.password}}<br>
+        {% for error in form.errors.password %}
+        <span style="color:red;">[{{ error }}]</span>
+        {% endfor %}<br>
     </p>
     <p>{{form.remember_me}} Remember Me?</p>
     <p><input type="submit" value="Sign In"></p>
