完善用户登录功能

--- a/micblog/app/templates/index.html
+++ b/micblog/app/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
+
 {% block content %}
-<h1>Hi,{{ user.nickname }}!</h1>
+
+{% if not current_user.is_authenticated %}
+<h1>Hi,Guys!</h1>
+{% else %}
+<h1>Welcom back,{{ current_user.nickname }}!</h1>
+{% endif %}
+
 {% for post in posts %}
 <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
 {% endfor %}
