--- a/micblog/app/templates/sign_up.html
+++ b/micblog/app/templates/sign_up.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% blcok content %}
+{% block content %}
 
 <form action="/sign-up", method="POST" name="sign_up">
     {{ form.hidden_tag() }}
